test/tests/stages/18_structures/invalid_types/extra_credit/union_initializers/static_union_init_not_constant.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[35]:
  union
  identifier(u)
  {
  int
  identifier(a)
  ;
  int
  identifier(b)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(i)
  =
  const int(10)
  ;
  static
  union
  identifier(u)
  identifier(my_union)
  =
  {
  identifier(i)
  }
  ;
  return
  const int(0)
  ;
  }
